MKDIR works and I have a better understand of swagger
