# api/docs/swagger.json
@@ -52,18 +52,13 @@
                 "summary": "Create Directory",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Path",
-                        "name": "path",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Name",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
+                        "description": "Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CreateDirectoryRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -77,7 +72,7 @@
             }
         },
         "/directory-contents": {
-            "get": {
+            "post": {
                 "description": "Get contents of a directory",
                 "consumes": [
                     "application/json"
@@ -91,11 +86,13 @@
                 "summary": "Directory Contents",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Path",
-                        "name": "path",
-                        "in": "path",
-                        "required": true
+                        "description": "Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.GetDirectoryContentsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -168,6 +165,17 @@
         }
     },
     "definitions": {
+        "handlers.CreateDirectoryRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.CreateDirectoryResponse": {
             "type": "object",
             "properties": {
@@ -193,6 +201,14 @@
                 },
                 "size": {
                     "type": "integer"
+                }
+            }
+        },
+        "handlers.GetDirectoryContentsRequest": {
+            "type": "object",
+            "properties": {
+                "path": {
+                    "type": "string"
                 }
             }
         },
